    * API: Measurement::Geo is now a role, not a class.
    * API: Added a `can_run` method to Exobrain
    * API: Exobrain::Agent::Depends allow dependencies to be delcared.
    * TESTING: Better testing for Exobrain::Agent.
    * TESTING: Exobrain::Test will load classes from t/lib
    * AGENTS: Ported `bee-habit` to Exobrain::Agent::Action::SimpleBeeHabit;

1.07      2014-03-04 22:46:36PST-0800 America/Los_Angeles

    * DEBUG: Added 'inject-done' debugging script to generate
             Intent::PersonalLog messages.
    * DISTRO: Turned Idonethis into a separate component
              (Exobrain::Idonethis)

1.06      2014-03-04 14:28:43PST-0800 America/Los_Angeles

    * BUILD: Added dependency on IPC::System::Simple, which is
             needed for `exobrain setup`.

1.05      2014-03-03 17:35:59PST-0800 America/Los_Angeles

    * FEATURE: Added a `exobrain debug` command for bus debugging.
               This obsoletes the old `debug.pl` command.
    * DOCS: Updated the README.md file with current insall instructions.
    * INTERNAL: Improved internal agent handling.
    * API: `use Exobrain` enables strict, warnings, 5.10 features.
    * TESTS: Added tests for agents and strict, warnings, 5.10 features. :)
    * DISTRO: Split `Exobrain::Beeminder` into its own separate distro.
    * FEATURE: 'exobrain setup [Component]` now works!
               Eg: `exobrain setup Beeminder`.

1.04      2014-02-28 23:18:32EST-0500 America/Montreal

    * FEATURE: Added a `exobrain setup` command to do basic exobrain/ubic setup.
    * DOCS: Improved documentation in sample .exobrainrc file.
    * DOCS: Expanded information in Exobrain.pm
    * BUGFIX: Fixed bug where libraries were not packaged.

1.03      2014-02-28 12:47:07EST-0500 America/Montreal

    * DISTRIBUTION: De-crufted distributed tarball.
                    See GH #37, thanks to @tsibley for spotting this.

1.02      2014-02-28 03:02:36EST-0500 America/Montreal
