@@ -4,7 +4,27 @@ use Method::Signatures;
 use Try::Tiny;
 use Exobrain::Types qw(TimeOut PosInt);
 
-# ABTRACT: Role for exobrain sources which poll a source.
+# ABSTRACT: Role for exobrain sources which poll a source.
+# VERSION
+
+=head1 SYNOPSIS
+
+    package Exobrain::Agent::Action::Foo;
+    use Moose;
+
+    with 'Exobrain::Agent::Poll';
+
+    sub poll {
+        # This method will be called on a regular basis.
+    }
+
+=head1 DESCRIPTION
+
+This role arranges for the consumer's C<poll> method to
+be called on a periodic basis. It also includes the
+functionality of L<Exobrain::Agent>.
+
+=cut
 
 with 'Exobrain::Agent';
 
@@ -16,8 +36,10 @@ has max_errors => (isa => PosInt,  is => 'rw', default =>  5 );
 
 =method start
 
-Automatically called when a C<Source> class is started, this 
-starts the actual agent (wrapping C<poll>), and never returns.
+This is a wrapper around the actual agent, which arranges to
+call its C<poll> method every C<$self->frequency> seconds.
+
+It never returns.
 
 =cut
 
