@@ -4,4 +4,14 @@ use Moose::Role;
 
 with 'Exobrain::Message';
 
+# ABSTRACT: Role for Exobrain intent packets
+# VERSION
+
+=head1 DESCRIPTION
+
+Currently this is a very thin wrapper over L<Exobrain::Message>, but
+may contain more functionality in the future.
+
+=cut
+
 1;
