@@ -5,6 +5,23 @@ use warnings;
 
 use JSON::Any;
 
+# ABSTRACT: Type system for Exobrain
+# VERSION
+
+=head1 SYNOPSIS
+
+    use Exobrain::Types qw(SmsStr PhoneNum);
+
+=head1 DESCRIPTION
+
+This provides a central point for accessing the type-system
+used by Exobrain. At this time you'll need to view this
+module's source to see all the types available.
+
+Documentation patches are very, very welcome.
+
+=cut
+
 my $json = JSON::Any->new( allow_blessed => 1 );
 
 use MooseX::Types -declare => [qw(
